[project]
name = "csv-excel-tool"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
dev = [
    "click>=8.3.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "rich>=14.2.0",
    "tqdm>=4.67.1",
]

[project.scripts]
csv-tool = "csv_excel_tool.cli:cli"   # 改成带横线的名字
